# forge-new-website

./: .gitignore  ISSUES.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test.txt
.github/: CODEOWNERS
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  init.sh  initial_data.py  main.py  pyproject.toml  requirements.txt  wait_for_db.py
backend/alembic/: env.py
backend/alembic/versions/: 2024012651_alpha_table_setup_3aae57c1edcd.py  2024012722_fixes_foreign_key_overlap_issue_fee16fdc02c6.py  2024080219_initial_revision_7b8c2113c65f.py  (+13 more)
backend/api/: api.py  deps.py  utils.py
backend/app/: backend_pre_start.py  crud.py  enums.py  initial_data.py  main.py  tests_pre_start.py  utils.py
backend/core/: security.py  session.py
backend/models/: __init__.py  audit_log.py  base.py  machine.py  machine_group.py  machine_type.py  machine_usage.py  org.py  resource.py  resource_slot.py  resource_usage_quantity.py  role.py  semester.py  state.py  user.py
backend/schemas/: enums.py  requests.py  responses.py
backend/tests/: conftest.py  test_auth.py  test_machines.py  test_roles.py  test_users.py
database/: .env.dev  .env.test
discordbot/: Dockerfile  bot.py
forge_backend/: .env.example
forge_backend/app/: models.py
frontend/: Dockerfile  PrusaMk3.ai  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.scss  App.tsx  Constants.tsx  GlobalAtoms.tsx  declarations.d.ts  enums.tsx  index.scss  index.tsx  interfaces.tsx  svg.d.ts
(+197 files in other folders)
