[tool.poetry]
authors = ["Mark Haddleton <markwhaddleton@gmail.com>"]
description = "Forge @ RPI Backend."
name = "backend"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.109.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
pydantic = {version = "^2.5.3", extras = ["dotenv", "email"]}
pydantic-settings = "^2.1.0"
pyjwt = {version = "^2.8.0", extras = ["crypto"]}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.25"
xlsxwriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
coverage = "^7.3.2"
httpx = "^0.25.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.4"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
freezegun = "^1.4.0"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"
markers = ["pytest.mark.asyncio"]
minversion = "6.0"
testpaths = ["app/tests"]

[tool.ruff]
target-version = "py312"
# pycodestyle, pyflakes, isort, pylint, pyupgrade
select = ["E", "W", "F", "I", "PL", "UP"]
ignore = ["E501"]
